<resources>
    <string name="app_name">AtikApp</string>

    <string name="view_special_orders_name">Pedidos Especiales</string>
    <string name="view_complete_order_name">Completa tu orden</string>
    <string name="view_register_name">Registrarse</string>
    <string name="btn_login_name">Login</string>
    <string name="btn_confirm_name">Completa tu orden</string>
    <string name="btn_add_name">Agregar a la orden</string>

    <!--Strings view Register-->
    <string name="textView_register_name"><b>Nombre</b></string>
    <string name="textView_register_lastname"><b>Apellido</b></string>
    <string name="textView_register_phone"><b>Telefono</b></string>
    <string name="textView_register_switch">Recibe alertas de promociones en tu telefono</string>
    <string name="textView_register_mail"><b>Direccion de correo electronico</b></string>
    <string name="textView_register_password"><b>Contraseña</b></string>
    <string name="btn_register_name"><b>Registrate</b></string>

    <!--Strings view special orders-->\
    <string name="textView_special_orders_escoge_postre"><b>Escoge tu postre:</b></string>
    <string name="textView_special_orders_escoge_sabor"><b>Escoge el sabor:</b></string>
    <string name="textView_special_orders_otro"><b>Otro:</b></string>
    <string name="textView_special_orders_cantidad_porciones"><b>Cantidad de porciones:</b></string>
    <string name="textView_special_orders_adicionales"><b>Escribe indicaciones adicionales:</b></string>
    <string name="textView_special_orders_agrega_imagen"><b>Agrega una imagen de referencia:</b></string>
    <string name="Bottom_special_orders_imagen"><b>Imagen:</b></string>
    <string name="Bottom_special_orders_completar_orden"><b>Completar tu orden</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings view complete order-->
    <string name="tittle_textview"><b>Informacion de entrega</b></string>
    <string name="type_order_textview"><b>Tipo de orden:</b></string>
    <string name="type_order_btn"><b>Recoger</b></string>
    <string name="type_order_btn2"><b>A domicilio</b></string>
    <string name="date_textview"><b>Fecha de entrega:</b></string>
    <string name="hour_textview"><b>Hora de entrega:</b></string>
    <string name="phone_textview"><b>Numero de telefono:</b></string>
    <string name="direction_textview"><b>Direccion de envio:</b></string>
    <string name="finalizar_btn"><b>Realizar pedido</b></string>
    <string name="last_orders">Ultimas 10 ordenes</string>
    <string name="shipping">Envio</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="home">Home</string>
    <string name="order">Tu orden</string>
    <string name="locations">Ubicaciones</string>
    <string name="profile">Perfil</string>
    <string name="spinner_title_text">Ubicación</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="pedidos">Pedidos</string>
    <string name="productos">Productos</string>
    <string name="display_name_location">%s</string>
    <string name="display_description_location">%s</string>
    <string name="display_name_user">%s</string>
    <string name="display_lastname_user">%s</string>
    <string name="display_phoneNumber_user">%s</string>
    <string name="display_email_user">%s</string>
    <string name="display_promotion_name">%s</string>
    <string name="display_promotion_discount">%s</string>

</resources>
