<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/principalViewFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/locationsFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/locations"/>

    <item
        android:id="@+id/currentOrderFragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/order"/>

    <item
        android:id="@+id/activeOrdersFragment"
        android:icon="@drawable/ic_active"
        android:title="Orden Activa"/>


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"/>

</menu>