<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_st"
            android:layout_marginEnd="@dimen/margin_st"
            android:layout_marginBottom="@dimen/margin_st"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textName"
            style="@style/form_textview_style"
            android:text="@string/textView_register_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textLastName"
            style="@style/form_textview_style"
            android:text="@string/textView_register_lastname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textPhone"
            style="@style/form_textview_style"
            android:text="@string/textView_register_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLastName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textMail"
            style="@style/form_textview_style"
            android:layout_marginTop="@dimen/margin_st"
            android:text="@string/textView_register_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchAlertas"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textPassword"
            style="@style/form_textview_style"
            android:text="@string/textView_register_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMail"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editName"
            style="@style/form_edit_text_style"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editLastName"
            style="@style/form_edit_text_style"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLastName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editPhone"
            style="@style/form_edit_text_style"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPhone"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editMail"
            style="@style/form_edit_text_style"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMail"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/switchAlertas"
            style="@style/content_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_st"
            android:layout_marginTop="@dimen/margin_tf"
            android:layout_marginEnd="@dimen/margin_ft"
            android:layout_marginBottom="@dimen/margin_st"
            android:text="@string/textView_register_switch"
            android:textSize="@dimen/switch_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPhone"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonRegister"
            style="@style/btn_register_style"
            android:layout_width="@dimen/btn_register_login_width"
            android:layout_height="@dimen/btn_register_login_height"
            android:layout_marginStart="@dimen/margin_st"
            android:layout_marginTop="@dimen/margin_st"
            android:layout_marginEnd="@dimen/margin_st"
            android:layout_marginBottom="@dimen/margin_st"
            android:background="@color/color_12"
            android:textColor="#FFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>